# glafiraeuro

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  utils.py
app/bot/: create.py
app/bot/routers/: recruiter.py  start.py
app/services/: ai_client.py  claude_token.py  resume_scorer.py  talantix_client.py  talantix_models.py  talantix_token.py
scripts/: introspect.py  probe_persons_pagination.py  probe_source_field.py  probe_vacancy_fullpage.py  probe_vacancy_mismatch.py  probe_vacancy_pagination.py
tests/: test_claude_token.py  test_models.py  test_score_prefix.py  test_utils.py
