[project]
name = "glafiraeuro"
version = "0.1.0"
description = "Telegram-бот «Глафира-РекрутерЕвромед» — оценка кандидатов в Talantix через Claude"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4",
    "httpx>=0.28,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
